# cogitron

./: .gitignore  .gitmodules  LICENSE  README.md  install.sh  peripheral.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
car/: TODO.md  init_motor.py
cogitron/: __init__.py  arms.py  camera.py  config.py  dynamixel_cogitron.py  filecache.py  read_values.py
cogitron/car/: driving.py
cogitron/query_device/: __init__.py  query_device.c
cogitron/scripts/: arm_reader.py  calibrate.py  execute.sh  execute_multiple_policies.py  find_server.sh  get_camera_config.py  get_follower_port.py  get_leader_port.py  interactive.py  opencv_video_stream.py  read_values.py  record.py  record_data.py  record_dataset.sh  teleoperate.py  test_arms.py  train.sh
computer-vision/: Notebooktrain.ipynb  pyproject.toml  testttt.py  traininggon.py
computervision/depths/: app.ipynb  newapp.py
computervision/objectdetection/: yolov8.py
docs/: background-process.md  debugging.md
lerobot/common/robot_devices/motors/: dynamixel.py
lerobot/configs/robot/: koch.yaml
scripts/: interactive.py
src/: opencv_video_stream.py  record_data.py  teleoperate.py
src/cogitron/: __init__.py  arms.py  record.py
