[metadata]
name = cogitron
version = 0.1
description = "Cogitron!"
authors = []
repository = "https://github.com/CogitoNTNU/cogitron"
readme = "README.md"
license = "GPL3"
classifiers=[]
[build-system]
requires = ["setuptools"]

[project]
dependencies = []

[options]
zip_safe = false

[options.extras_require]
dev =
    build
    wheel

[options.packages.find]
exclude =
    tools*
    venv*