[metadata]
name = cogitron
version = 0.0.1
description = "Cogitron!"
authors = []
repository = "https://github.com/CogitoNTNU/cogitron"
readme = "README.md"
license = "GPL3"
classifiers=[]
[build-system]
requires = ["setuptools"]

[project]
dependencies = []

[options]
zip_safe = false
packages=find:

[options.extras_require]
dev =
    build
    wheel

[options.packages.find]
exclude =
    tools*
    venv*

[options.entry_points]
console_scripts =
    cogitron-video-stream = cogitron.scripts.opencv_video_stream:main
    cogitron-follower-port = cogitron.scripts.get_follower_port:main
    cogitron-leader-port = cogitron.scripts.get_leader_port:main
    cogitron-camera-config = cogitron.scripts.get_camera_config:main
    cogitron-teleoperate = cogitron.scripts.teleoperate:main